--- a/peerlearningfrontend/src/Components/Dashboard/Student/StudentDashboard.css
+++ b/peerlearningfrontend/src/Components/Dashboard/Student/StudentDashboard.css
@@ -1,52 +1,53 @@
 .studentdashboard{
-    padding-top: 65px;
+  padding-top: 65px;
 }
 
 .container_student_page1{
-    background-color: #FAFAFB;
-    max-width: 100vw;
-    text-align: left;
-    border-radius: 0.2rem;
-    padding-bottom: 20px;
-    padding-top: 1px;
-    padding-left: 18.25rem;
-    padding-right: 18.25rem;
-    /* border: 1px solid black; */
-  }
+  width: 100vw;
+  background-color: #FAFAFB;
+  text-align: left;
+  border-radius: 0.2rem;
+  padding-bottom: 20px;
+  padding-top: 1px;
+  padding-left: 8.25rem;
+  padding-right: 8.25rem;
+  /* border: 1px solid black; */
+}
+
+.course_page_heading{
+  text-align: left;
+  padding-left: 20px;
+}
+
+.profile_tab_student_progress{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  padding-right: 55px;
+  column-gap: 10px;
+}
+
+.score{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-right: 25px;
+  height: 200px;
+  padding-left: 10px;
   
-  .course_page_heading{
-    text-align: left;
-    padding-left: 20px;
-  }
-  
-  .profile_tab_student_progress{
-    display: grid;
-    grid-template-columns: 30% 70%;
-    padding-right: 55px;
-    column-gap: 10px;
-  }
-  
-  .score{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    margin-right: 25px;
-    height: 200px;
-    padding-left: 10px;
-    
-    row-gap: 20%;
-  }
-  
-  .score_1{
-    /* border: 1px solid black; */
-    margin-left: 10px;
-    padding-left: 30px;
-    background-color: white;
-  }
-  
-  .course_page1_container{
-    background-color: white;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-bottom: 10px;
-    border-radius: 0.1rem;
-  }
+  row-gap: 20%;
+}
+
+.score_1{
+  /* border: 1px solid black; */
+  margin-left: 10px;
+  padding-left: 30px;
+  background-color: white;
+}
+
+.course_page1_container{
+  background-color: white;
+  margin-top: 25px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-bottom: 10px;
+  border-radius: 0.1rem;
+}
