--- a/peerlearningfrontend/src/Components/Dashboard/Student/comp/profile_tab/profile_tab.css
+++ b/peerlearningfrontend/src/Components/Dashboard/Student/comp/profile_tab/profile_tab.css
@@ -1,21 +1,22 @@
 .profile_tab_container{
+  margin-top: 100px;
+  max-width: 50vw;
   display: grid;
   grid-template-rows: 40% 60%;
   text-align: left;
   /* border: 1px solid grey; */
   border-radius: 0.2;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 10px;
   margin-bottom: 30px;
   margin-top: 20px;
-  /* width: 20.25rem;
-  height: 10rem; */
   flex-shrink: 0;
   border-radius: 0.375rem;
   background: #FFF;
 }
 
 .student_profile_details{
+  padding-top: 4%;
   padding-left: 2.5%;
   padding-bottom: 1rem;
   display: grid;
