--- a/peerlearningfrontend/src/Components/Dashboard/Student/comp/student_progress/student_progress.css
+++ b/peerlearningfrontend/src/Components/Dashboard/Student/comp/student_progress/student_progress.css
@@ -5,7 +5,7 @@
   text-align: left;
   /* border: 1px solid grey; */
   border-radius: 0.2;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   margin-right: 20px;
   margin-bottom: 30px;
   margin-top: 20px;
@@ -35,40 +35,33 @@
   margin: auto 0;
 }
 
-.cummulative_assignment_grade h3{
-  color: var(--card-due-text, rgba(0, 0, 0, 0.55));
-  text-align: center;
-  font-family: Montserrat;
-  font-size: 0.625rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  background-position: center;
-}
+
 .cummulative_consistency_grade{
   border-left: 1px solid #F1F3F4 ;
   text-align: center;
   margin: auto 0;
 }
 
-.grade_img{
-  /* background-image: url(../../../../public/images/aplus.jpg); */
-  width: 4.58831rem;
-  height: 4.59656rem;
-  /* background: no-repeat; */
-  background-position: center;
+.cummulative_assignment_grade h6{
+  color: var(--card-due-text, rgba(0, 0, 0, 0.55));
+text-align: center;
+font-family: Montserrat;
+font-size: 0.625rem;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
 }
 
-.grade_img h3{
-  color: #00FFAC;
-  font-family: Montserrat;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 0.0225rem;
-  
+.cummulative_consistency_grade h6{
+  color: var(--card-due-text, rgba(0, 0, 0, 0.55));
+text-align: center;
+font-family: Montserrat;
+font-size: 0.625rem;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
 }
+
 
 .student_progress_course_details{
   display: grid;
