--- a/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView1.module.css
+++ b/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView1.module.css
@@ -183,3 +183,37 @@
 .bottom{
   width: 100%;
 }
+
+/* Table CSS */
+.studentList {
+  width: 95%;
+  margin-left: 35px;
+  border-collapse: collapse;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+}
+
+.studentList th {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+
+.studentList th,
+.studentList td {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+.studentList .noSubmission {
+  color: red;
+}
+
+.emptyScore {
+  color: red;
+}
+
+.nonEmptyScore {
+  color: green;
+}
