--- a/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView1.module.css
+++ b/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView1.module.css
@@ -132,7 +132,7 @@
 
 .pdfDiv {
   width: 300px;
-  height: 275px;
+  height: 326px;
   background: #ffffff;
   box-shadow: -1px 0px 4px rgba(0, 0, 0, 0.25), 1px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
@@ -146,19 +146,19 @@
   color: #c5221f;
 }
 
-.btn2, .btn3, .btn4{
+.btn2, .btn3, .btn4, .btn5{
   margin-top: 18px;
   background: #ffffff;
   color: #1A73E8;
 }
 
-.btn5 {
+.btn6 {
   margin-top: 18px;
   color: #ffffff;
   background-color: #1A73E8;
 }
 
-.btn1, .btn2, .btn3, .btn4, .btn5 {
+.btn1, .btn2, .btn3, .btn4, .btn5, .btn6 {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 14px;
