--- a/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView2.module.css
+++ b/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView2.module.css
@@ -138,6 +138,33 @@
   border-radius: 6px;
   text-align: center;
   margin-left: 40px;
+  overflow: visible;
+}
+
+.dropDown {
+  position: absolute;
+  top: 35%;
+  right: -50px;
+}
+
+.checkboxDropdown {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff; 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  padding: 8px; 
+}
+
+.checkboxDropdown label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.checkboxDropdown input {
+  margin-right: 8px;
 }
 
 .btn1 {
@@ -146,25 +173,68 @@
   color: #c5221f;
 }
 
-.btn2, .btn3, .btn4 {
+.buttonGroup {
+  display: flex;
+  align-items: center;
+}
+
+.btn2 {
+  margin-left: 25px;
   margin-top: 18px;
   background: #ffffff;
   color: #1A73E8;
 }
 
-.btn5 {
+.btn3 {
+  margin-top: 18px;
+  background: #ffffff;
+  color: #1A73E8;
+}
+
+.btn4, .btn5 {
+  margin-top: 18px;
+  background: #ffffff;
+  color: #1A73E8;
+}
+
+.btn6 {
   margin-top: 18px;
   background: #606368;
   color: white;
 }
 
-.btn1, .btn2, .btn3, .btn4, .btn5 {
+.btn1, .btn4, .btn5, .btn6 {
   font-family: "Montserrat", sans-serif;
-
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
   width: 252px;
+  height: 34px;
+  border: 1px solid #dbdce0;
+  box-sizing: border-box;
+  border-radius: 6px;
+  letter-spacing: -0.02em;
+}
+
+.btn2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  width: 222px;
+  height: 34px;
+  border: 1px solid #dbdce0;
+  box-sizing: border-box;
+  border-radius: 6px;
+  letter-spacing: -0.02em;
+}
+
+.btn3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  width: 30px;
   height: 34px;
   border: 1px solid #dbdce0;
   box-sizing: border-box;
