--- a/peerlearningfrontend/src/Components/Popups/PopUp.css
+++ b/peerlearningfrontend/src/Components/Popups/PopUp.css
@@ -198,3 +198,33 @@ input[type=number]::-webkit-outer-spin-button {
     box-sizing: border-box;
     border-radius: 6px;
 }
+
+#button{
+    margin-top: 20px;
+}
+
+#saveButton{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    width: 80px;
+    height: 29px;
+    background: #1A73E8;
+    border: 1px solid #DBDCE0;
+    box-sizing: border-box;
+    border-radius: 4px;
+    margin-left: 50px;
+    color: #FFFFFF;
+}
+
+#cancelButton{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    width: 80px;
+    height: 29px;
+    background: #FFFFFF;
+    border: 1px solid #DBDCE0;
+    box-sizing: border-box;
+    border-radius: 4px;
+    margin-left: 40px;
+    color: #1A73E8;
+}
