--- a/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView1.module.css
+++ b/peerlearningfrontend/src/Components/Teacher/TeacherAssignmentView1.module.css
@@ -311,6 +311,12 @@
   margin-left: 10px; 
   display: inline;
 }
+.yellowflagimg {
+  width: 28px;
+  height: 28px; 
+  margin-left: 10px; 
+  display: inline;
+}
 
 .emptyScore {
   color: red;
@@ -326,3 +332,331 @@
   color: blue;
   font-weight: bold;
 }
+
+/* .mainDiv {
+  display: flex;
+  margin-top: 128px;
+}
+
+.contentDiv {
+  display: flex;
+  width: calc(100% - 580px);
+  margin-left: 120px;
+  margin-right: 40px;
+}
+
+.moreIcon {
+  cursor: pointer;
+  position: relative;
+  right: 16px;
+}
+
+.AssgIcon{
+  margin-right: 10px;
+}
+
+.AssgnName {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 34px;
+  color: #1a73e8;
+  height: 40px;
+}
+
+.teacher {
+  height: 17px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: -0.02em;
+  color: rgba(0, 0, 0, 0.549);
+  margin-top: -10px;
+}
+
+.teacher span {
+  position: relative;
+  bottom: 3px;
+  color: rgba(0, 0, 0, 0.549);
+  font-weight: 900;
+}
+
+.pointsanddue{
+  display: flex;
+  margin-top: -10px;
+  position: relative;
+}
+
+.points {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: -0.02em;
+  color: #353642;
+}
+
+.duediv{
+  position: absolute;
+  right: 0px;
+}
+
+.due{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: -0.02em;
+  color: #353642;
+}
+
+.line {
+  width: calc(100% + 24px);
+  height: 10px;
+  margin-top: -50px;
+}
+
+.AssignmentSubtitle {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #353642;
+  margin-top: -20px;
+}
+
+.uploadDoc {
+  padding: 0px 20px 0px 0px;
+  width: 445px;
+  height: 60px;
+  background: #ffffff;
+  border: 1px solid #dbdce0;
+  border-radius: 6px;
+  margin-top: 16px;
+  display: flex;
+}
+
+#thumbnail1 {
+  width: 60px;
+  height: 58px;
+  padding-right: 10px;
+}
+
+#written{
+  flex-direction: column;
+}
+
+#ques{
+  margin-left: 8px;
+  margin-top: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  color: #606368;
+}
+
+#type{
+  margin-top: -15px;
+  margin-left: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #606368;
+}
+
+.pdfDiv {
+  position: relative;
+  width: 300px;
+  height: 326px;
+  background: #ffffff;
+  box-shadow: -1px 0px 4px rgba(0, 0, 0, 0.25), 1px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  text-align: center;
+  margin-left: 40px;
+  overflow: visible;
+}
+
+
+.dropDown {
+  position: absolute;
+  top: 35%;
+  right: -50px;
+}
+
+.checkboxDropdown {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff; 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  padding: 8px; 
+}
+
+.checkboxDropdown label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.checkboxDropdown input {
+  margin-right: 8px;
+}
+
+.btn1 {
+  margin-top: 20px;
+  background: #ffffff;
+  color: #c5221f;
+}
+.buttonGroup {
+  display: flex;
+  align-items: center;
+}
+
+.btn2 {
+  margin-left: 25px;
+  margin-top: 18px;
+  background: #ffffff;
+  color: #1A73E8;
+}
+
+.btn3 {
+  margin-top: 18px;
+  background: #ffffff;
+  color: #1A73E8;
+}
+
+.btn4, .btn5, .btn6{
+  margin-top: 18px;
+  background: #ffffff;
+  color: #1A73E8;
+}
+
+.btn7 {
+  margin-top: 18px;
+  color: #ffffff;
+  background-color: #1A73E8;
+}
+
+.btn1, .btn4, .btn5, .btn6, .btn7 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  width: 252px;
+  height: 34px;
+  border: 1px solid #dbdce0;
+  box-sizing: border-box;
+  border-radius: 6px;
+  letter-spacing: -0.02em;
+}
+
+.btn2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  width: 222px;
+  height: 34px;
+  border: 1px solid #dbdce0;
+  box-sizing: border-box;
+  border-radius: 6px;
+  letter-spacing: -0.02em;
+}
+
+.btn3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  width: 30px;
+  height: 34px;
+  border: 1px solid #dbdce0;
+  box-sizing: border-box;
+  border-radius: 6px;
+  letter-spacing: -0.02em;
+}
+
+.completeprogress{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  margin-top: 20px;
+  margin-left: 170px;
+}
+
+.studentSubmissions{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 8px 0px 5px 20px;
+  margin-top: 100px;
+  margin-left: 28px; 
+}
+
+.bottom{
+  width: 100%;
+}
+
+
+.studentList {
+  width: 95%;
+  margin-left: 35px;
+  border-collapse: collapse;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+}
+
+.studentList th {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+
+.studentList th,
+.studentList td {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+.studentList .noSubmission {
+  color: black;
+}
+
+.studentFullName {
+  color : blue;
+  font-weight: bold;
+  display: inline;
+}
+
+.flagstudentFullName {
+  color : black;
+  font-weight: bold;
+  display: inline;
+}
+
+.redflagimg {
+  width: 20px;
+  height: 20px; 
+  margin-left: 10px; 
+  display: inline;
+}
+
+.emptyScore {
+  color: red;
+  font-weight: bold;
+}
+
+.nonEmptyScore {
+  color: rgb(58, 248, 58);
+  font-weight: bold;
+}
+
+.Score {
+  color: blue;
+  font-weight: bold;
+} */
